--- a/OnlineNewtworkAppWebAPI/OnlineNewtworkAppWebAPI/appsettings.json
+++ b/OnlineNewtworkAppWebAPI/OnlineNewtworkAppWebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "my top secret key for this project so can i use it without facking problem i hate problems so why i meet them why"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
